Azure workshop application

--- a/application/RedisWorkshop/Views/Home/Index.cshtml
+++ b/application/RedisWorkshop/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Redis Workshop</h1>
-    <a href="/listings">Go to listings</a>
+    <h1 class="display-4">Azure Workshop</h1>
+    <a href="/listings">Go to listings hosted on azure</a>
     
 </div>
